# robot_platform

./: .gitignore  README.md  platform.urdf  test.py  ur10_mujoco.py  ur10_robot.xml
franka_panda_env/: __init__.py
franka_panda_env/envs/: __init__.py  panda_env.py  reach.py  robot_env.py
franka_panda_platform/: main_franka_panda.xml  object.xml  panda_ee_control.xml  panda_ee_ctrl.xml  panda_joint_ctrl.xml
franka_panda_platform/assets/: actuator.xml  assets.xml
franka_panda_platform/franka_panda/: franka_panda.xml
meshes/: platform.stl
robot_ws/src/limb_core_msgs/: CMakeLists.txt
robot_ws/src/limb_core_msgs/msg/: ContactState.msg  JointCommand.msg  JointState.msg  JointStatus.msg  ObjectInfo.msg  ObjectTrajectory.msg
robot_ws/src/limb_core_msgs/srv/: GetObjectInfo.srv  GetObjectPose.srv  GetObjectPoseWithImage.srv  SetObjectInfo.srv  ShutdownSystem.srv
ur10_description/: platform.xml  ur10_robot.urdf  ur10_robot_joint_ctrl.xml  ur10_robot_original.xml
ur10_env/: __init__.py
ur10_env/envs/: __init__.py  reach.py  ur_env.py
ur10_mujoco_gym/: __init__.py
ur10_mujoco_gym/envs/: __init__.py  reach.py  ur_env.py
ur10_mujoco_gym/gym_robot_env/: gym_robot_env.py  utils.py
ur10_mujoco_ros_v0/: ur10_mujoco.py
ur10_platform/: ur10_ee_ctrl.xml  ur10_joint_ctrl.xml
ur10_platform/assets/: actuator.xml  assets.xml  (+1 more)
ur10_sim/: ur10_robot.xml  ur10_robot_ee_ctrl.xml  ur10_robot_joint_ctrl.xml
ur10_ws/src/limb_core_msgs/: CMakeLists.txt  limb_core_msgs_to_string.cc  limb_core_msgs_to_string.h  package.xml
ur10_ws/src/limb_core_msgs/msg/: JointState.msg  MarkerArray.msg  MarkerStringArray.msg  ShutdownReason.msg  TactileState.msg
ur10_ws/src/limb_core_msgs/srv/: GetMinJerkTraj.srv  GetObjectTrajectory.srv  GetTactileState.srv
(+150 files in other folders)
